crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__builtins__data_scalar_codecs.snap
---
source: crates/nash-codegen/src/build/tests/source/builtins.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Data exposing (toData, fromData)\ndecodedInt : Int\ndecodedInt = fromData (I 42)\ndecodedBytes : Bytes\ndecodedBytes = fromData (B #\"abcd\")\nmain =\n    if equalsInteger (unIData decodedInt) 42 then\n        if equalsByteString (unBData decodedBytes) #\"abcd\" then\n            equalsData (toData decodedInt) (I 42)\n        else False\n    else False\n"
---
--- unoptimized Core
let fromBool#2 : bool -> bool = \value#9 : bool -> value#9 in
let fromInt#4 : int -> int = \value#12 : int -> value#12 in
let fromData#10 : Data -> 'erased = \coerce#16 : Data -> coerce#16 in
let decodedInt#3 : Int = fromData#10 ((\field#11 : int -> iData field#11) (fromInt#4 42)) in
let fromBytes#6 : bytes -> bytes = \value#14 : bytes -> value#14 in
let decodedBytes#5 : Bytes = fromData#10 ((\field#13 : bytes -> bData field#13) (fromBytes#6 (con bytestring #abcd))) in
let toData#7 : 'erased -> Data = \coerce#15 : 'erased -> coerce#15 in
let main#1 : bool = case@Bool equalsInteger (unIData decodedInt#3) (fromInt#4 42) of
  True -> case@Bool equalsByteString (unBData decodedBytes#5) (fromBytes#6 (con bytestring #abcd)) of
    True -> equalsData (toData#7 decodedInt#3) ((\field#8 : int -> iData field#8) (fromInt#4 42))
    False -> fromBool#2 false
  False -> fromBool#2 false in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromBool_2
    [(lam fromInt_4
      [(lam fromData_10
        [(lam decodedInt_3
          [(lam fromBytes_6
            [(lam decodedBytes_5
              [(lam toData_7
                [(lam main_1 main_1)
                  (case
                    [[(builtin equalsInteger) [(builtin unIData) decodedInt_3]]
                      [fromInt_4 (con integer 42)]]
                    [fromBool_2 (con bool False)]
                    (case
                      [[(builtin equalsByteString) [(builtin unBData) decodedBytes_5]]
                        [fromBytes_6 (con bytestring #abcd)]]
                      [fromBool_2 (con bool False)]
                      [[(builtin equalsData) [toData_7 decodedInt_3]]
                        [(lam field_8 [(builtin iData) field_8]) [fromInt_4 (con integer 42)]]]))])
                (lam coerce_15 coerce_15)])
              [fromData_10
                [(lam field_13 [(builtin bData) field_13]) [fromBytes_6 (con bytestring #abcd)]]]])
            (lam value_14 value_14)])
          [fromData_10
            [(lam field_11 [(builtin iData) field_11]) [fromInt_4 (con integer 42)]]]])
        (lam coerce_16 coerce_16)])
      (lam value_12 value_12)])
    (lam value_9 value_9)])
--- optimized Core
true
--- optimized UPLC
(program 1.1.0 (con bool True))
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 2543179, memory: 8663
