crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__builtins__expect_non_empty_list_with_as_binding_fails_silent.snap
---
source: crates/nash-codegen/src/build/tests/source/builtins.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Eq exposing (..)\nfromAssetList : list int -> list int\nfromAssetList inner =\n    case inner of\n        (_ :: _) as x -> x\n        _ -> fail\nmain : bool\nmain =\n    let\n        x = fromAssetList []\n    in\n    eq x x\n"
---
--- unoptimized Core
let fromBool#7 : bool -> bool = \value#27 : bool -> value#27 in
let eq#15 : int -> int -> bool = equalsInteger in
letrec
  eq#3 : list 'erased -> list 'erased -> bool [static []] = \xs#5 : list 'erased ys#6 : list 'erased -> let match#19 : list 'erased = xs#5 in
  case@List match#19 of
    Nil -> let match#8 : list 'erased = ys#6 in
    case@List match#8 of
      Nil -> fromBool#7 true
      Cons field#9 field#10 -> fromBool#7 false
    Cons field#20 field#21 -> let x#11 : 'erased = field#20 in
    let restX#12 : list 'erased = field#21 in
    let match#16 : list 'erased = ys#6 in
    case@List match#16 of
      Nil -> fromBool#7 false
      Cons field#17 field#18 -> let y#13 : 'erased = field#17 in
      let restY#14 : list 'erased = field#18 in
      case@Bool eq#15 x#11 y#13 of
        True -> eq#3 restX#12 restY#14
        False -> false
in
let fromAssetList#4 : list int -> list int = \inner#22 : list int -> let match#24 : list int = inner#22 in
case@List match#24 of
  Nil -> error
  Cons field#25 field#26 -> let x#23 : list int = match#24 in
  x#23 in
let x#2 : list int = fromAssetList#4 (con (list integer) []) in
let main#1 : bool = eq#3 x#2 x#2 in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromBool_7
    [(lam eq_15
      [(lam eq_3
        [(lam fromAssetList_4
          [(lam x_2 [(lam main_1 main_1) [[eq_3 x_2] x_2]])
            [fromAssetList_4 (con (list integer) [])]])
          (lam inner_22
            [(lam match_24
              (case match_24 (lam field_25 (lam field_26 [(lam x_23 x_23) match_24])) (error)))
              inner_22])])
        [(lam self_28 [self_28 self_28])
          (lam self_28
            (lam xs_5
              (lam ys_6
                [(lam match_19
                  (case
                    match_19
                    (lam field_20
                      (lam field_21
                        [(lam x_11
                          [(lam restX_12
                            [(lam match_16
                              (case
                                match_16
                                (lam field_17
                                  (lam field_18
                                    [(lam y_13
                                      [(lam restY_14
                                        (case
                                          [[eq_15 x_11] y_13]
                                          (con bool False)
                                          [[[self_28 self_28] restX_12] restY_14]))
                                        field_18])
                                      field_17]))
                                [fromBool_7 (con bool False)]))
                              ys_6])
                            field_21])
                          field_20]))
                    [(lam match_8
                      (case
                        match_8
                        (lam field_9 (lam field_10 [fromBool_7 (con bool False)]))
                        [fromBool_7 (con bool True)]))
                      ys_6]))
                  xs_5])))]])
      (builtin equalsInteger)])
    (lam value_27 value_27)])
--- optimized Core
letrec
  eq#31 : list 'erased -> list 'erased -> bool [static []] = \xs#32 : list 'erased ys#33 : list 'erased -> case@List xs#32 of
    Nil -> case@List ys#33 of
      Nil -> true
      Cons field#36 field#37 -> false
    Cons field#38 field#39 -> case@List ys#33 of
      Nil -> false
      Cons field#43 field#44 -> let anf#55 : bool = equalsInteger field#38 field#43 in
      case@Bool anf#55 of
        True -> eq#31 field#39 field#44
        False -> false
in
let x#53 : list int = error in
eq#31 x#53 x#53
--- optimized UPLC
(program 1.1.0
  [(lam eq_15 [(lam x_16 [[eq_15 x_16] x_16]) (error)])
    [(lam self_4 [self_4 self_4])
      (lam self_5
        (lam xs_6
          (lam ys_7
            (case
              xs_6
              (lam field_10
                (lam field_11
                  (case
                    ys_7
                    (lam field_12
                      (lam field_13
                        [(lam anf_14
                          (case anf_14 (con bool False) [[[self_5 self_5] field_11] field_13]))
                          [[(builtin equalsInteger) field_10] field_12]]))
                    (con bool False))))
              (case ys_7 (lam field_8 (lam field_9 (con bool False))) (con bool True))))))]])
--- result
error: ExplicitErrorTerm
--- logs
[]
--- budget
cpu: 100, memory: 100
