crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__builtins__from_data_blanket_without_validation_instances.snap
---
source: crates/nash-codegen/src/build/tests/source/builtins.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Data exposing (fromData, toData)\ntype Token = Token Int\ntype alias Wrapped = { item : Token }\nunchecked : Big 'a => Data -> 'a\nunchecked = fromData\nwrapped : Wrapped\nwrapped = unchecked (List [Builtin.constrData 0 [I 42]])\ntokens : List Token\ntokens = unchecked (List [B #\"aa\"])\nmapping : Map Token Token\nmapping = fromData (Map [mkPairData (B #\"aa\") (I 7)])\nmain =\n    if equalsData (toData wrapped) (List [Builtin.constrData 0 [I 42]]) then\n        if equalsData (toData tokens) (List [B #\"aa\"]) then\n            equalsData (toData mapping) (Map [mkPairData (B #\"aa\") (I 7)])\n        else False\n    else False\n"
---
--- unoptimized Core
let fromBool#2 : bool -> bool = \value#16 : bool -> value#16 in
let toData#3 : 'erased -> Data = \coerce#17 : 'erased -> coerce#17 in
let fromInt#6 : int -> int = \value#21 : int -> value#21 in
let fromData#25 : Data -> 'erased = \coerce#29 : Data -> coerce#29 in
let unchecked#18 : Data -> Data = fromData#25 in
let wrapped#4 : { _0 : Main.Token } = unchecked#18 ((\field#19 : list Data -> listData field#19) (mkCons (constrData (fromInt#6 0) (mkCons ((\field#20 : int -> iData field#20) (fromInt#6 42)) (con (list data) []))) (con (list data) []))) in
let fromBytes#11 : bytes -> bytes = \value#24 : bytes -> value#24 in
let tokens#8 : List Main.Token = unchecked#18 ((\field#22 : list Data -> listData field#22) (mkCons ((\field#23 : bytes -> bData field#23) (fromBytes#11 (con bytestring #aa))) (con (list data) []))) in
let mapping#12 : Map Main.Token Main.Token = fromData#25 ((\field#26 : list (pair Data Data) -> mapData field#26) (mkCons (mkPairData ((\field#27 : bytes -> bData field#27) (fromBytes#11 (con bytestring #aa))) ((\field#28 : int -> iData field#28) (fromInt#6 7))) (con (list (pair data data)) []))) in
let main#1 : bool = case@Bool equalsData (toData#3 wrapped#4) ((\field#5 : list Data -> listData field#5) (mkCons (constrData (fromInt#6 0) (mkCons ((\field#7 : int -> iData field#7) (fromInt#6 42)) (con (list data) []))) (con (list data) []))) of
  True -> case@Bool equalsData (toData#3 tokens#8) ((\field#9 : list Data -> listData field#9) (mkCons ((\field#10 : bytes -> bData field#10) (fromBytes#11 (con bytestring #aa))) (con (list data) []))) of
    True -> equalsData (toData#3 mapping#12) ((\field#13 : list (pair Data Data) -> mapData field#13) (mkCons (mkPairData ((\field#14 : bytes -> bData field#14) (fromBytes#11 (con bytestring #aa))) ((\field#15 : int -> iData field#15) (fromInt#6 7))) (con (list (pair data data)) [])))
    False -> fromBool#2 false
  False -> fromBool#2 false in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromBool_2
    [(lam toData_3
      [(lam fromInt_6
        [(lam fromData_25
          [(lam unchecked_18
            [(lam wrapped_4
              [(lam fromBytes_11
                [(lam tokens_8
                  [(lam mapping_12
                    [(lam main_1 main_1)
                      (case
                        [[(builtin equalsData) [toData_3 wrapped_4]]
                          [(lam field_5 [(builtin listData) field_5])
                            [[(force (builtin mkCons))
                              [[(builtin constrData) [fromInt_6 (con integer 0)]]
                                [[(force (builtin mkCons))
                                  [(lam field_7 [(builtin iData) field_7]) [fromInt_6 (con integer 42)]]]
                                  (con (list data) [])]]]
                              (con (list data) [])]]]
                        [fromBool_2 (con bool False)]
                        (case
                          [[(builtin equalsData) [toData_3 tokens_8]]
                            [(lam field_9 [(builtin listData) field_9])
                              [[(force (builtin mkCons))
                                [(lam field_10 [(builtin bData) field_10]) [fromBytes_11 (con bytestring #aa)]]]
                                (con (list data) [])]]]
                          [fromBool_2 (con bool False)]
                          [[(builtin equalsData) [toData_3 mapping_12]]
                            [(lam field_13 [(builtin mapData) field_13])
                              [[(force (builtin mkCons))
                                [[(builtin mkPairData)
                                  [(lam field_14 [(builtin bData) field_14]) [fromBytes_11 (con bytestring #aa)]]]
                                  [(lam field_15 [(builtin iData) field_15]) [fromInt_6 (con integer 7)]]]]
                                (con (list (pair data data)) [])]]]))])
                    [fromData_25
                      [(lam field_26 [(builtin mapData) field_26])
                        [[(force (builtin mkCons))
                          [[(builtin mkPairData)
                            [(lam field_27 [(builtin bData) field_27]) [fromBytes_11 (con bytestring #aa)]]]
                            [(lam field_28 [(builtin iData) field_28]) [fromInt_6 (con integer 7)]]]]
                          (con (list (pair data data)) [])]]]])
                  [unchecked_18
                    [(lam field_22 [(builtin listData) field_22])
                      [[(force (builtin mkCons))
                        [(lam field_23 [(builtin bData) field_23]) [fromBytes_11 (con bytestring #aa)]]]
                        (con (list data) [])]]]])
                (lam value_24 value_24)])
              [unchecked_18
                [(lam field_19 [(builtin listData) field_19])
                  [[(force (builtin mkCons))
                    [[(builtin constrData) [fromInt_6 (con integer 0)]]
                      [[(force (builtin mkCons))
                        [(lam field_20 [(builtin iData) field_20]) [fromInt_6 (con integer 42)]]]
                        (con (list data) [])]]]
                    (con (list data) [])]]]])
            fromData_25])
          (lam coerce_29 coerce_29)])
        (lam value_21 value_21)])
      (lam coerce_17 coerce_17)])
    (lam value_16 value_16)])
--- optimized Core
let anf#61 : Data = iData 42 in
let anf#62 : list Data = mkCons anf#61 (con (list data) []) in
let anf#63 : Data = constrData 0 anf#62 in
let anf#64 : list Data = mkCons anf#63 (con (list data) []) in
let anf#65 : Data = listData anf#64 in
let anf#73 : Data = iData 7 in
let anf#74 : pair Data Data = mkPairData (con data (B #aa)) anf#73 in
let anf#75 : list (pair Data Data) = mkCons anf#74 (con (list (pair data data)) []) in
let anf#76 : Data = mapData anf#75 in
let anf#80 : Data = iData 42 in
let anf#81 : list Data = mkCons anf#80 (con (list data) []) in
let anf#82 : Data = constrData 0 anf#81 in
let anf#83 : list Data = mkCons anf#82 (con (list data) []) in
let anf#84 : Data = listData anf#83 in
let anf#85 : bool = equalsData anf#65 anf#84 in
case@Bool anf#85 of
  True -> let anf#91 : bool = equalsData (con data (List [B #aa])) (con data (List [B #aa])) in
  case@Bool anf#91 of
    True -> let anf#96 : Data = iData 7 in
    let anf#97 : pair Data Data = mkPairData (con data (B #aa)) anf#96 in
    let anf#98 : list (pair Data Data) = mkCons anf#97 (con (list (pair data data)) []) in
    let anf#99 : Data = mapData anf#98 in
    equalsData anf#76 anf#99
    False -> false
  False -> false
--- optimized UPLC
(program 1.1.0
  [(lam builtin_21
    [(lam partial_22
      [(lam partial_23
        [(lam anf_1
          [(lam anf_2
            [(lam anf_3
              [(lam anf_4
                [(lam anf_5
                  [(lam anf_6
                    [(lam anf_7
                      [(lam anf_8
                        [(lam anf_9
                          [(lam anf_10
                            [(lam anf_11
                              [(lam anf_12
                                [(lam anf_13
                                  [(lam anf_14
                                    [(lam anf_15
                                      (case
                                        anf_15
                                        (con bool False)
                                        [(lam anf_16
                                          (case
                                            anf_16
                                            (con bool False)
                                            [(lam anf_17
                                              [(lam anf_18
                                                [(lam anf_19
                                                  [(lam anf_20 [[(builtin equalsData) anf_9] anf_20]) [(builtin mapData) anf_19]])
                                                  [[builtin_21 anf_18] (con (list (pair data data)) [])]])
                                                [partial_22 anf_17]])
                                              [(builtin iData) (con integer 7)]]))
                                          [[(builtin equalsData) (con data (List [B #aa]))] (con data (List [B #aa]))]]))
                                      [[(builtin equalsData) anf_5] anf_14]])
                                    [(builtin listData) anf_13]])
                                  [[builtin_21 anf_12] (con (list data) [])]])
                                [partial_23 anf_11]])
                              [[builtin_21 anf_10] (con (list data) [])]])
                            [(builtin iData) (con integer 42)]])
                          [(builtin mapData) anf_8]])
                        [[builtin_21 anf_7] (con (list (pair data data)) [])]])
                      [partial_22 anf_6]])
                    [(builtin iData) (con integer 7)]])
                  [(builtin listData) anf_4]])
                [[builtin_21 anf_3] (con (list data) [])]])
              [partial_23 anf_2]])
            [[builtin_21 anf_1] (con (list data) [])]])
          [(builtin iData) (con integer 42)]])
        [(builtin constrData) (con integer 0)]])
      [(builtin mkPairData) (con data (B #aa))]])
    (force (builtin mkCons))])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 8236706, memory: 23035
