crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__builtins__from_data_default_for_user_type.snap
---
source: crates/nash-codegen/src/build/tests/source/builtins.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Data exposing (FromData)\ntype Datum = Datum Int\ndecoded : Datum\ndecoded = fromData (Builtin.constrData 0 [I 42])\nmain =\n    case decoded of\n        Datum number -> unIData number\n"
---
--- unoptimized Core
let fromData#9 : Data -> 'erased = \coerce#12 : Data -> coerce#12 in
let fromInt#10 : int -> int = \value#13 : int -> value#13 in
let decoded#2 : Main.Datum = fromData#9 (constrData (fromInt#10 0) (mkCons ((\field#11 : int -> iData field#11) (fromInt#10 42)) (con (list data) []))) in
let match#4 : Main.Datum = decoded#2 in
let projection#14 : pair int (list Data) = unConstrData match#4 in
case@Pair projection#14 of
  Pair tag#6 fields#7 -> case@List fields#7 of
    Cons field#5 fieldTail#8 -> let number#3 : Int = field#5 in
    let main#1 : int = unIData number#3 in
    main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromData_9
    [(lam fromInt_10
      [(lam decoded_2
        [(lam match_4
          [(lam projection_14
            (case
              projection_14
              (lam tag_6
                (lam fields_7
                  (case
                    fields_7
                    (lam field_5
                      (lam fieldTail_8
                        [(lam number_3 [(lam main_1 main_1) [(builtin unIData) number_3]]) field_5]))
                    (error))))))
            [(builtin unConstrData) match_4]])
          decoded_2])
        [fromData_9
          [[(builtin constrData) [fromInt_10 (con integer 0)]]
            [[(force (builtin mkCons))
              [(lam field_11 [(builtin iData) field_11]) [fromInt_10 (con integer 42)]]]
              (con (list data) [])]]]])
      (lam value_13 value_13)])
    (lam coerce_12 coerce_12)])
--- optimized Core
let anf#31 : Data = iData 42 in
let anf#32 : list Data = mkCons anf#31 (con (list data) []) in
let anf#33 : Data = constrData 0 anf#32 in
let projection#22 : pair int (list Data) = unConstrData anf#33 in
unIData anf#31
--- optimized UPLC
(program 1.1.0
  [(lam builtin_5
    [(lam anf_1
      [(lam anf_2
        [(lam anf_3
          [(lam projection_4 [(builtin unIData) anf_1]) [(builtin unConstrData) anf_3]])
          [[(builtin constrData) (con integer 0)] anf_2]])
        [[builtin_5 anf_1] (con (list data) [])]])
      [(builtin iData) (con integer 42)]])
    (force (builtin mkCons))])
--- result
(con integer 42)
--- logs
[]
--- budget
cpu: 1067244, memory: 5960
